# defaults-util

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  defaults.rs  diff.rs  error.rs  main.rs  ui.rs
src/command/: generator.rs
src/defaults/: parser.rs  reader.rs  types.rs
src/diff/: detector.rs  types.rs
src/ui/: input.rs  render.rs
