[package]
name = "defaults-util"
version = "0.1.1"
edition = "2024"
description = "A TUI application that detects macOS defaults setting changes and generates reproducible commands"
license = "MIT"
repository = "https://github.com/petamorikei/defaults-util"
keywords = ["macos", "defaults", "tui", "settings"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
plist = "1.7"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
